--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,6 +27,10 @@ html {
 body {
   font-family: var(--font-family-base);
   background: var(--gradient-main);
+  background-color: #764ba2;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   min-height: 100vh;
   color: var(--color-text);
   overflow-x: hidden;
