--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1060,6 +1060,10 @@ button {
   color: var(--color-text);
 }
 
+.theory-admin__field.theory-admin__field--full {
+  grid-column: 1 / -1;
+}
+
 .theory-admin__field input,
 .theory-admin__field textarea {
   padding: 10px 12px;
