--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1081,7 +1081,7 @@ button {
 
 .theory-admin__list-actions {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 10px;
   width: 100%;
